# fastapi_nginx_template

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/app/: main.py
app/app/routers/: subpage.py
app/app/static/subpage/: test.js
app/app/templates/: layout.html
app/app/templates/subpage/: index.html
web/conf.d/: app.conf
