[tool.poetry]
name = "test_fastapi_app"
version = "0.1.0"
description = "just for test"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "*"
fastapi = "*"
jinja2 = "*"
aiofiles = "*"

[tool.poetry.dev-dependencies]
# sphinx
sphinx = "3.2.*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
